# ocr_testing

./:  OCR_Test.ipynb  README.md  ocr_test_1.ipynb  pdf_to_text_notebook.ipynb  pyproject.toml
.ipynb_checkpoints/:  OCR_Test-checkpoint.ipynb  ocr_test_1-checkpoint.ipynb
